SERVER-9139 clean up unsharded cursors in CursorCache