src/mongo/s/cursors.cpp
@@ -203,6 +203,13 @@ namespace mongo {
         _cursors.erase( id );
     }
     
+    void CursorCache::removeRef( long long id ) {
+        verify( id );
+        scoped_lock lk( _mutex );
+        _refs.erase( id );
+        _refsNS.erase( id );
+    }
+
     void CursorCache::storeRef(const std::string& server, long long id, const std::string& ns) {
         LOG(_myLogLevel) << "CursorCache::storeRef server: " << server << " id: " << id << endl;
         verify( id );
